...
                    const SizedBox(height: 16),
                    Row(
                      children: [
                        Expanded(
                          child: _buildActionButton(
                            icon: Icons.post_add,
                            label: 'Nueva boleta',
                            onPressed: () {
                              ref.read(navigationProvider.notifier).selectTab(2, routeName: '/crear-boleta');
                            },
                          ),
                        ),
                        const SizedBox(width: 12),
...
